# network_homework

./: README.md
netfilter_test/: .gitignore  CMakeLists.txt  README.md
netfilter_test/src/: main.cpp
pcap_stat/: .gitignore  CMakeLists.txt  README.md
pcap_stat/includes/network/: address.h  packet_capture.h  statistics.h  types.h
pcap_stat/includes/network/packets/: ether_header.h  ipv4.h  ipv4_header.h
pcap_stat/src/: main.cpp
pcap_test/: .gitignore  CMakeLists.txt  README.md  main.cpp  network_addr.cpp  network_addr.h  packet.cpp  packet.h
sum_test/: Makefile  README.md  main.cpp  sum.cpp
vending_machine/: .gitignore  CMakeLists.txt  README.md  main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
